create documentation for 5 routes
