# backend/src/routes/users.js
@@ -7,7 +7,7 @@ router.get('/logs', authorize, controller.getAllLogs) // OK
 
 router.post('/signup', controller.create) // gui
 
-router.post('/signin', authenticate) // henrique
+router.post('/signin', authenticate)
 
 router.post('/restore', authenticateForRestoreUser, authorizeForRestoreUser, controller.restore) // juliano
 
@@ -15,6 +15,6 @@ router.patch('/', authorize, controller.update) // luane
 
 router.delete('/', authorize, controller.delete) // gui
 
-router.delete('/hard', authorize, controller.hardDelete) // henrique
+router.delete('/hard', authorize, controller.hardDelete)
 
 module.exports = router
